--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "the project rest apis ",
   "main": "server.js",
   "scripts": {
-      "start": "nodemon node server.js"
+    "start": "nodemon node server.js"
   },
   "author": "akash",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "msnodesqlv8": "^4.2.1",
+    "mssql": "^11.0.1",
     "nodemon": "^3.1.4"
   }
 }
