--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT = 8000
+PORT = 5000
 NODE_ENV = development
 HOST = localhost
-SERVER = server
+SERVER = localhost
 DRIVER = msnodesqlv8
-USER = root
-DATABASE = nodesqlapi
-PASSWORD = 
+USER = sa
+DATABASE = app_akash
+PASSWORD = Akash@123
